--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>activiti-parent</artifactId>
     <version>7.0.45</version>
     <relativePath/>
-  </parent> 
+  </parent>
   <groupId>org.activiti</groupId>
   <artifactId>activiti-root</artifactId>
   <packaging>pom</packaging>
@@ -16,9 +16,9 @@
   <description>Activiti Core :: Parent</description>
   <url>http://activiti.org</url>
   <properties>
-    <activiti-build.version>7.0.45</activiti-build.version> 
-    <activiti-api.version>7.0.58</activiti-api.version>
-    <activiti-core-common.version>7.0.27</activiti-core-common.version>
+    <activiti-build.version>7.0.45</activiti-build.version>
+    <activiti-api.version>7.0.59</activiti-api.version>
+    <activiti-core-common.version>7.0.28</activiti-core-common.version>
     <activiti.version>${project.version}</activiti.version>
     <batik.version>1.10</batik.version>
     <commons-email.version>1.5</commons-email.version>
@@ -180,6 +180,7 @@
       </dependency>
 
       <!-- Test -->
+
       <dependency>
         <groupId>net.javacrumbs.json-unit</groupId>
         <artifactId>json-unit-fluent</artifactId>
@@ -206,7 +207,7 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-  
+
   <!-- Activiti Build Parent Marker Dependency for Dependency Convergence Tests -->
   <dependencies>
     <dependency>
@@ -228,7 +229,7 @@
       <type>pom</type>
     </dependency>
   </dependencies>
-  
+
   <modules>
     <module>activiti-core-dependencies-tests</module>
     <module>activiti-core-dependencies</module>
@@ -243,6 +244,7 @@
     <module>activiti-spring</module>
     <module>activiti-spring-boot-starter</module>
     <module>activiti-spring-app-process</module>
+    <module>activiti-spring-conformance-tests</module>
   </modules>
 
   <repositories>
@@ -277,7 +279,7 @@
           <deployAtEnd>true</deployAtEnd>
         </configuration>
       </plugin>
-    
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
