fix: (updatebot) push versions to activiti-examples master
Fixes Activiti/Activiti#2203

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -3,7 +3,7 @@ github:
   - name: activiti
     repositories:
     - name: activiti-examples
-      branch: develop
+      branch: master
     - name: activiti-cloud-runtime-bundle-service
       branch: develop
       useSinglePullRequest: true
