--- a/activiti-spring-boot-starter/pom.xml
+++ b/activiti-spring-boot-starter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
       <groupId>org.activiti</groupId>
       <artifactId>activiti-core-dependencies</artifactId>
-      <version>7.0.0-SNAPSHOT</version>
+      <version>7.0.87</version>
       <relativePath>../activiti-core-dependencies</relativePath>
     </parent>
     <artifactId>activiti-spring-boot-starter</artifactId>
