Revert "removing unneeded prs to repos that are not consuming activiti-dependencies"
This reverts commit 6c967a3f6243e7557e43af6a30537b8f5ef98ecb.

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -7,3 +7,11 @@ github:
     - name: activiti-cloud-runtime-bundle-service
       branch: develop
       useSinglePullRequest: true
+    - name: activiti-cloud-service-common
+      branch: develop
+      useSinglePullRequest: true
+    - name: activiti-cloud-api
+      branch: develop
+      useSinglePullRequest: true
+      
+      
