--- a/.mergify.yml
+++ b/.mergify.yml
@@ -12,13 +12,17 @@ pull_request_rules:
       merge:
         method: merge
         strict: true
-  - name: automatic merge when CI passes and 1 approving reviews
+  - name: automatic merge when CI passes and all requested reviews approved
     conditions:
       - "#approved-reviews-by>=1"
+      - "#review-requested=0"
+      - "#changes-requested-reviews-by=0"
+      - "#commented-reviews-by=0"      
       - status-success=continuous-integration/jenkins/pr-head
       - status-success=continuous-integration/travis-ci/pr
       - status-success=continuous-integration/travis-ci/push
       - status-success=license/cla
+      - label!=do-not-merge      
     actions:
       delete_head_branch: {}
       merge:
