--- a/activiti-spring-conformance-tests/pom.xml
+++ b/activiti-spring-conformance-tests/pom.xml
@@ -20,5 +20,6 @@
         <module>activiti-spring-conformance-set0</module>
         <module>activiti-spring-conformance-set1</module>
         <module>activiti-spring-conformance-set2</module>
+        <module>activiti-spring-conformance-set3</module>
     </modules>
 </project>
