--- a/activiti-spring-app-process/pom.xml
+++ b/activiti-spring-app-process/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-core-dependencies</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.103</version>
     <relativePath>../activiti-core-dependencies</relativePath>
   </parent>
   <artifactId>activiti-spring-app-process</artifactId>
