fix: missing required maven-failsafe-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
           <version>${maven-resources-plugin.version}</version>
       </plugin>
       <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven-failsafe-plugin.version}</version>
+      </plugin>
+      <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>${jacoco-maven-plugin.version}</version>
