--- a/activiti-spring/pom.xml
+++ b/activiti-spring/pom.xml
@@ -121,6 +121,11 @@
       <artifactId>hibernate-entitymanager</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
