--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,10 @@
   <inceptionYear>2018</inceptionYear>
 
   <properties>
-    <activiti-build.version>7.0.46</activiti-build.version>
-    <activiti-api.version>7.0.66</activiti-api.version>
-    <activiti-core-common.version>7.0.35</activiti-core-common.version> 
-    <activiti.version>7.0.107</activiti.version>
+    <activiti-build.version>0.0.0-SNAPSHOT-PR-47-20</activiti-build.version>
+    <activiti-api.version>0.0.0-SNAPSHOT-PR-65-14</activiti-api.version>
+    <activiti-core-common.version>0.0.0-SNAPSHOT-PR-41-5</activiti-core-common.version> 
+    <activiti.version>0.0.0-SNAPSHOT-PR-2352-10</activiti.version>
   </properties>
 
   <organization>
