--- a/.mergify.yml
+++ b/.mergify.yml
@@ -5,7 +5,7 @@ pull_request_rules:
       - status-success=continuous-integration/jenkins/pr-head
       - status-success=continuous-integration/travis-ci/pr
       - status-success=continuous-integration/travis-ci/push
-      - status-success=license/cla
+      #- status-success=license/cla
       - label!=do-not-merge
     actions:
       delete_head_branch: {}
