fix:(plugins) use a better version of maven plugins

--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,18 @@
         <module>activiti-api-spring-integration-example</module>
         <module>activiti-api-web-example</module>
     </modules>
-</project>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version></plugin>
+    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M1</version></plugin>
+    </plugins>
+    </build>
+  </project>
