--- a/pom.xml
+++ b/pom.xml
@@ -93,12 +93,14 @@
           <deployAtEnd>true</deployAtEnd>
         </configuration>
       </plugin>
-      
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M3</version></plugin>
-    </plugins>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.0.1</version>
+          <configuration>
+          </configuration>
+        </plugin>
+      </plugins>
 
   </build>
 
