--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>activiti-root</artifactId>
   <packaging>pom</packaging>
   <name>Activiti Core :: Parent</name>
-  <version>7.0.0-SNAPSHOT</version>
+  <version>7.0.119</version>
   <description>Activiti Core :: Parent</description>
   <url>http://activiti.org</url>
   <properties>
