--- a/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
@@ -2,7 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-api-impl</artifactId>
     <version>7.0.0-SNAPSHOT</version>
