fix activiti-engine pom

--- a/activiti-engine/pom.xml
+++ b/activiti-engine/pom.xml
@@ -168,7 +168,7 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven--plugin</artifactId>
+        <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <excludes>
             <exclude>**/*TestCase.java</exclude>
