--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>activiti-api-basic-full-example-bean</module>
         <module>activiti-api-basic-full-example-nobean</module>
+        <module>activiti-api-basic-connector-example</module>
         <module>activiti-api-basic-process-example</module>
         <module>activiti-api-basic-task-example</module>
         <module>activiti-api-spring-integration-example</module>
