Add process variable definition

--- a/activiti-api-basic-connector-example/src/main/resources/processes/RankMovie-extensions.json
+++ b/activiti-api-basic-connector-example/src/main/resources/processes/RankMovie-extensions.json
@@ -17,7 +17,7 @@
                     "outputs": {
                         "movieDesc": {
                             "type": "variable",
-                            "value": "movieDesc"
+                            "value": "movieDescription"
                         }
                     }
                 }
@@ -29,6 +29,12 @@
                 "name": "movieToRank",
                 "type": "string",
                 "required": true
+            },
+            "movieDesc": {
+                "id": "movieDesc",
+                "name": "movieDesc",
+                "type": "string",
+                "required": false
             }
         }
     },
