--- a/activiti-engine/pom.xml
+++ b/activiti-engine/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-core-dependencies</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.127</version>
     <relativePath>../activiti-core-dependencies</relativePath>
   </parent>
 
