--- a/activiti-spring-conformance-tests/activiti-spring-conformance-set2/pom.xml
+++ b/activiti-spring-conformance-tests/activiti-spring-conformance-set2/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-spring-conformance-tests</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.127</version>
   </parent>
 
   <artifactId>activiti-spring-conformance-set2</artifactId>
