Add rating variable

--- a/activiti-api-basic-connector-example/src/main/resources/processes/RankMovie-extensions.json
+++ b/activiti-api-basic-connector-example/src/main/resources/processes/RankMovie-extensions.json
@@ -35,7 +35,14 @@
                 "name": "movieDesc",
                 "type": "string",
                 "required": false
+            },
+            "ratingId": {
+                "id": "ratingId",
+                "name": "rating",
+                "type": "integer",
+                "required": false
             }
+
         }
     },
     "version": "0.0.16",
