--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -3,5 +3,5 @@ github:
   - name: activiti
     repositories:
     - name: activiti-dependencies
-      branch: develop
+      branch: 7.0.x
       useSinglePullRequest: true
