Refactor ProcessExtensionService and ConnectorService

--- a/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
@@ -63,6 +63,10 @@
       <artifactId>activiti-spring-process-extensions</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.activiti</groupId>
+      <artifactId>activiti-spring-connector-loader</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.activiti.core.common</groupId>
       <artifactId>activiti-spring-security-policies</artifactId>
     </dependency>
