--- a/pom.xml
+++ b/pom.xml
@@ -241,9 +241,11 @@
     <module>activiti-json-converter</module>
     <module>activiti-engine</module>
     <module>activiti-spring</module>
+    <module>activiti-spring-resource-loader</module>
     <module>activiti-spring-boot-starter</module>
     <module>activiti-spring-app-process</module>
     <module>activiti-spring-process-extensions</module>
+    <module>activiti-spring-connector-loader</module>
     <module>activiti-spring-conformance-tests</module>
   </modules>
 
