--- a/activiti-spring-boot-starter/pom.xml
+++ b/activiti-spring-boot-starter/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>activiti-spring-security</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.activiti.core.common</groupId>
+            <artifactId>activiti-spring-resource-finder</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.activiti.api</groupId>
             <artifactId>activiti-api-process-model</artifactId>
         </dependency>
