--- a/activiti-api-impl/activiti-api-task-runtime-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-task-runtime-impl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.activiti</groupId>
         <artifactId>activiti-api-impl</artifactId>
-        <version>7.1.0-SNAPSHOT</version>
+        <version>7.1.33</version>
     </parent>
     <artifactId>activiti-api-task-runtime-impl</artifactId>
     <name>Activiti API :: Task Runtime Implementation</name>
