Update steps library group id

--- a/activiti-spring-conformance-tests/activiti-spring-conformance-set3/pom.xml
+++ b/activiti-spring-conformance-tests/activiti-spring-conformance-set3/pom.xml
@@ -16,7 +16,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.activiti.steps</groupId>
+      <groupId>org.activiti.core.common</groupId>
       <artifactId>activiti-steps-assertions</artifactId>
     </dependency>
     <dependency>
