Deal with names vs UUIDs in connectors and variable mappings (#108)

--- a/activiti-api-basic-connector-example/src/main/resources/processes/RankMovie-extensions.json
+++ b/activiti-api-basic-connector-example/src/main/resources/processes/RankMovie-extensions.json
@@ -10,15 +10,15 @@
         "mappings": {
             "Task_1spvopd": {
                 "inputs": {
-                  "movieNameId": {
+                  "movieName": {
                     "type": "variable",
-                    "value": "movieToRankId"
+                    "value": "movieToRank"
                   }
                 },
                 "outputs": {
-                    "movieDescId": {
+                    "movieDesc": {
                         "type": "variable",
-                        "value": "movieDescriptionId"
+                        "value": "movieDescription"
                     }
                 }
             }
