fix(updatebot.yml): add activiti-cloud-query-service

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -7,6 +7,9 @@ github:
     - name: activiti-cloud-runtime-bundle-service
       branch: develop
       useSinglePullRequest: true
+    - name: activiti-cloud-query-service
+      branch: develop
+      useSinglePullRequest: true      
     - name: activiti-cloud-service-common
       branch: develop
       useSinglePullRequest: true
