--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <activiti-api.version>7.1.31</activiti-api.version>
     <activiti-core-common.version>7.1.31</activiti-core-common.version>
     <activiti.version>${project.version}</activiti.version>
+    <awaitility.version>3.1.6</awaitility.version>
     <batik.version>1.10</batik.version>
     <commons-email.version>1.5</commons-email.version>
     <commons-fileupload.version>1.3.3</commons-fileupload.version>
@@ -132,6 +133,11 @@
         <groupId>javax.annotation</groupId>
         <artifactId>jsr250-api</artifactId>
         <version>${jsr250-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.awaitility</groupId>
+        <artifactId>awaitility</artifactId>
+        <version>${awaitility.version}</version>
       </dependency>
       <!-- batik -->
       <dependency>
