--- a/activiti-api-impl/activiti-api-process-runtime-impl/src/main/resources/task-variable-mapping-extensions.json
+++ b/activiti-api-impl/activiti-api-process-runtime-impl/src/main/resources/task-variable-mapping-extensions.json
@@ -16,6 +16,13 @@
         "required": true,
         "value": "inputmap1Value"
       },
+      "process-variable-inputmap-2-id": {
+        "id": "process-variable-inputmap-2-id",
+        "name": "process_constant_inputmap_2",
+        "type": "string",
+        "required": true,
+        "value": "inputmap2Value"
+      },
       "process-variable-outputmap-1-id": {
         "id": "process-variable-outputmap-1-id",
         "name": "process_variable_outputmap_1",
@@ -39,6 +46,24 @@
           }
         }
       }
+    },
+    "constants": {
+      "simpleTask": {
+        "process_constant_inputmap_2": {
+          "value": "constant_value"
+        },
+        "process_constant_1_2": {
+          "value": "constant_2_value"
+        }
+      },
+      "simpleTask_2": {
+        "process_constant_2_1": {
+          "value": "constant_1_value"
+        },
+        "process_constant_2_2": {
+          "value": "constant_2_value"
     }
+  }
+}
   }
 }
