--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <maven-source-plugin.version>2.4</maven-source-plugin.version>
     <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
     <maven-war-plugin.version>2.6</maven-war-plugin.version>
+    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     <!-- JVM params for test execution -->
     <argLine>-Duser.language=en</argLine>
     <!-- OSGi bundles properties -->
@@ -846,6 +847,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
+            <version>${maven-gpg-plugin.version}</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
