--- a/activiti-spring-conformance-tests/activiti-spring-conformance-signals/pom.xml
+++ b/activiti-spring-conformance-tests/activiti-spring-conformance-signals/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>activiti-spring-conformance-tests</artifactId>
         <groupId>org.activiti</groupId>
-        <version>7.1.0-SNAPSHOT</version>
+        <version>7.1.55</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
