--- a/activiti-spring-conformance-tests/pom.xml
+++ b/activiti-spring-conformance-tests/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-core-dependencies</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.55</version>
     <relativePath>../activiti-core-dependencies</relativePath>
   </parent>
   <artifactId>activiti-spring-conformance-tests</artifactId>
