--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ notifications:
 before_script:
   - echo MAVEN_OPTS=-Xmx1536m > ~/.mavenrc
 
-install: mvn install:install
+install: mvn jar:jar install:install
 
 jobs:
     include:
