--- a/modules/activiti-explorer/pom.xml
+++ b/modules/activiti-explorer/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-parent</artifactId>
-    <version>5.23.0-RC1</version>
+    <version>5.23.0</version>
     <relativePath>../activiti-parent</relativePath>
   </parent>
 
