--- a/modules/activiti-parent/pom.xml
+++ b/modules/activiti-parent/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-root</artifactId>
-    <version>5.23.0-RC1</version>
+    <version>5.23.0</version>
     <relativePath>../..</relativePath>
   </parent>
   <groupId>org.activiti</groupId>
