--- a/modules/activiti-spring-boot/spring-boot-samples/spring-boot-sample-custom-mybatis-mapper/pom.xml
+++ b/modules/activiti-spring-boot/spring-boot-samples/spring-boot-sample-custom-mybatis-mapper/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-spring-boot-samples</artifactId>
-    <version>5.23.0-RC1</version>
+    <version>5.23.0</version>
   </parent>
 
   <artifactId>spring-boot-sample-custom-mybatis-mapper</artifactId>
