--- a/tooling/archetypes/activiti-archetype-unittest/src/main/resources/archetype-resources/pom.xml
+++ b/tooling/archetypes/activiti-archetype-unittest/src/main/resources/archetype-resources/pom.xml
@@ -13,7 +13,7 @@
     <dependency>
       <groupId>org.activiti</groupId>
       <artifactId>activiti-engine</artifactId>
-      <version>5.23.0-RC1</version>
+      <version>5.23.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
