--- a/tooling/archetypes/pom.xml
+++ b/tooling/archetypes/pom.xml
@@ -9,7 +9,7 @@
     <groupId>org.activiti</groupId>
     <artifactId>activiti-root</artifactId>
     <relativePath>../..</relativePath>
-    <version>5.23.0-RC1</version>
+    <version>5.23.0</version>
   </parent>
 
 
