--- a/activiti-spring-boot-starter/pom.xml
+++ b/activiti-spring-boot-starter/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-      <groupId>org.activiti</groupId>
-      <artifactId>activiti-core-dependencies</artifactId>
-      <version>7.1.0-SNAPSHOT</version>
-      <relativePath>../activiti-core-dependencies</relativePath>
+        <groupId>org.activiti</groupId>
+        <artifactId>activiti-core-dependencies</artifactId>
+        <version>7.1.0-SNAPSHOT</version>
+        <relativePath>../activiti-core-dependencies</relativePath>
     </parent>
     <artifactId>activiti-spring-boot-starter</artifactId>
     <name>Activiti :: Spring Boot Starter</name>
@@ -106,6 +106,10 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
