--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <checkstyle-maven-plugin.version>3.1.0</checkstyle-maven-plugin.version>
     <skipCheckstyle>true</skipCheckstyle>
     <liquibase.version>3.7.0</liquibase.version>
+    <testcontainers.version>1.12.0</testcontainers.version>
   </properties>
   <dependencyManagement>
     <dependencies>
