--- a/activiti-spring-boot-starter/src/test/resources/application.properties
+++ b/activiti-spring-boot-starter/src/test/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=my-app
+spring.datasource.url=jdbc:postgresql://localhost:5432/test?loggerLevel=OFF
+spring.datasource.username=test
+spring.datasource.password=test
