Activiti 3760 project release version libs (#108)

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,8 @@
     <module>activiti-connector-model</module>
     <module>activiti-spring-application</module>
     <module>activiti-core-test</module>
+    <module>activiti-project-model</module>
+    <module>activiti-spring-project</module>
   </modules>
 
   <repositories>
