ACTIVITI-3760 Core logic for project release and application version bump up

--- a/activiti-engine/pom.xml
+++ b/activiti-engine/pom.xml
@@ -19,6 +19,10 @@
       <artifactId>activiti-api-runtime-shared</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.activiti.core.common</groupId>
+      <artifactId>activiti-project-model</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.activiti</groupId>
       <artifactId>activiti-bpmn-converter</artifactId>
     </dependency>
