--- a/activiti-spring/pom.xml
+++ b/activiti-spring/pom.xml
@@ -32,6 +32,10 @@
       <artifactId>activiti-api-runtime-shared</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.activiti.core.common</groupId>
+      <artifactId>activiti-spring-project</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
     </dependency>
