--- a/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
@@ -79,10 +79,6 @@
       <artifactId>spring-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-autoconfigure</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.activiti</groupId>
       <artifactId>activiti-engine</artifactId>
     </dependency>
@@ -90,6 +86,15 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
+    
+    <!-- Optional -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+      <optional>true</optional>
+    </dependency>
+    
+    <!-- Test -->    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
