[ACTIVITI-3763] add property for testcontainer version

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 
     <checkstyle-maven-plugin.version>3.1.0</checkstyle-maven-plugin.version>
     <skipCheckstyle>true</skipCheckstyle>
+    <testcontainers.version>1.12.1</testcontainers.version>
   </properties>
   <dependencyManagement>
     <dependencies>
