AAE-105 Refactoring for task variables payload

--- a/activiti-api-impl/activiti-api-task-runtime-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-task-runtime-impl/pom.xml
@@ -82,6 +82,9 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
-
+    	<dependency>
+     		<groupId>org.activiti.core.common</groupId>
+      		<artifactId>activiti-common-util</artifactId>
+    	</dependency>
     </dependencies>
 </project>
