AAE-691 Add upgrade scripts

--- a/activiti-bpmn-model/pom.xml
+++ b/activiti-bpmn-model/pom.xml
@@ -10,8 +10,7 @@
     <relativePath>../activiti-core-dependencies</relativePath>
   </parent>
 
-  <artifactId>activiti-bpmn-model</artifactId>
-  <name>Activiti :: BPMN Model</name>
+  ActivitiVersion  <name>Activiti :: BPMN Model</name>
 
   <dependencies>
     <dependency>
