AAE-691 Clean up

--- a/activiti-bpmn-model/pom.xml
+++ b/activiti-bpmn-model/pom.xml
@@ -10,7 +10,8 @@
     <relativePath>../activiti-core-dependencies</relativePath>
   </parent>
 
-  ActivitiVersion  <name>Activiti :: BPMN Model</name>
+  <artifactId>activiti-bpmn-model</artifactId>
+  <name>Activiti :: BPMN Model</name>
 
   <dependencies>
     <dependency>
